k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        # local onde irá procurar a imagem
        # image: felipefavarin/projetok8s-backend:1.0
        image: projetok8s-backend:1.0
        

        # se o kubernetes irá buscar a imagem localmente ou via Docker Hub
        # caso a imagem esteja no docker hub, necessário usar na imagem o nome de usuário
        imagePullPolicy: Never
        
        ports:
        - containerPort: 3000
