k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres
  
  template:

    metadata:
      labes:
        app: postgres

    spec:

      containers:
      - name: postgres

        image: postgres:15-alpine

        ports:
        - containerPort: 5432

        volumeMounts:
        # caminho padrão dos dados do PostgreSQL - PGDATA
        - mountPath: /var/lib/postgresql/data
        name: postgres-storage

      volumes:
      - name: postgres-storage

        persistentVolumeClaim:
          claimName: postgres-pvc
